syntax = "proto3";
package solver;
import "collections.proto";
import "solver_datastructures.proto";
import "solver_commons.proto";
option java_package = "com.booleworks.logicng.serialization.solvers";
option java_outer_classname = "ProtoBufSatSolver";

message PBSatSolver {
  PBSatSolverConfig config = 1;
  bool inSatCall = 2;

  map<string, int32> name2idx = 3;
  collections.PBIntVector validStates = 4;
  int32 nextStateId = 5;

  bool ok = 6;
  int32 qhead = 7;
  collections.PBIntVector unitClauses = 8;
  PBClauseVector clauses = 9;
  PBClauseVector learnts = 10;
  PBWatcherVectorVector watches = 11;
  PBVariableVector vars = 12;
  PBHeap orderHeap = 13;
  collections.PBIntVector trail = 14;
  collections.PBIntVector trailLim = 15;
  collections.PBBooleanVector model = 16;
  collections.PBIntVector assumptionConflict = 17;
  collections.PBIntVector assumptions = 18;
  repeated bytes assumptionPropositions = 19;
  collections.PBBooleanVector seen = 20;
  int32 analyzeBtLevel = 21;
  double claInc = 22;
  double varInc = 23;
  double varDecay = 24;
  int32 clausesLiterals = 25;
  int32 learntsLiterals = 26;
  bool canceledByHandler = 27;
  repeated solver.PBProofInformation pgOriginalClauses = 28;
  collections.PBIntVectorVector pgProof = 29;
  bool computingBackbone = 30;
  collections.PBIntVector backboneCandidates = 31;
  collections.PBIntVector backboneAssumptions = 32;
  map<int32, PBTristate> backboneMap = 33;
  collections.PBIntVector selectionOrder = 34;
  int32 selectionOrderIdx = 35;
  PBWatcherVectorVector watchesBin = 36;
  collections.PBIntVector permDiff = 37;
  collections.PBIntVector lastDecisionLevel = 38;
  PBBoundedLongQueue lbdQueue = 39;
  PBBoundedIntQueue trailQueue = 40;
  int32 myflag = 41;
  int64 analyzeLBD = 42;
  int32 nbClausesBeforeReduce = 43;
  int32 conflicts = 44;
  int32 conflictsRestarts = 45;
  double sumLBD = 46;
  int32 curRestart = 47;
}
